test/lambda/negative/semantic/fractional_n_suffix.ls
// @negative
// @description: 'n' literals are integer-only under the A.5 suffix split; fractional spellings need 'm'
1.5n
